Increase framanav z-index to fix dropdown below framacolibri nav

--- a/css/nav.css
+++ b/css/nav.css
@@ -131,7 +131,7 @@
 }
 
 #framanav.navbar {
-    z-index:1001;
+    z-index:1002;
     background-color: #FAFAFA !important;
     border-radius:0;
     border-top:0px solid #FAFAFA;
